# hord_manager

./: .env.example  .gitignore  README.md  alembic.ini  api-test.html  app.db  hord_manager.db  pyproject.toml  requirements-dev.txt  run_api.py  setup_env.sh
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py
backend/app/models/: art.py  business.py  currency.py  gemstone.py  gm.py  material.py  metal.py  player.py  session.py
backend/app/routers/: art.py  auth.py  businesses.py  currencies.py  data_management.py  gemstones.py  gm.py  health.py  materials.py  metals.py  real_estate.py  sessions.py
backend/app/schemas/: common.py
backend/app/services/: conversion.py  scraper.py
backend/app/utils/: migrations.py
docs/: DEV_CHECKLIST.md
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  MaterialApp.jsx  MinimalApp.jsx  TestApp.jsx
frontend/src/components/: Common.jsx  ErrorBoundary.jsx  Header.jsx  (+1 more)
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_materials.py  0002_update_metal_price_schema.py  0003_default_currencies.py  0004_flexible_currency_pegging.py  0005_prune_currencies.py  0006_remove_gold_currency.py  0007_update_metal_price_schema.py  0009_default_gemstones.py
tests/: conftest.py  test_art.py  test_businesses.py  test_currencies_defaults.py  test_currencies_delete.py  test_currencies_patch.py  test_currencies_upsert.py  test_gemstones.py  test_gm_settings.py  test_health.py  test_no_legacy_pydantic_config.py  test_real_estate.py
(+21 files in other folders)
