[project]
name = "hord-manager"
version = "0.1.0"
description = "Treasure management, currency conversion, and banking for TTRPGs"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend/app"]
addopts = "-q"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true

